fixed bag of chips ui text